fix spacing

--- a/src/flows/user/style.scss
+++ b/src/flows/user/style.scss
@@ -133,7 +133,7 @@
 
 .user {
     display: flex;
-    margin-bottom: $base-spacing * 2;
+    margin-bottom: $base-spacing * 4;
 
     .user-image {
         padding: $base-spacing;
